# docs/swagger.json
@@ -44,6 +44,38 @@
                 "responses": {}
             }
         },
+        "/api/v1/address/{address}/transactions": {
+            "get": {
+                "description": "Get all transactions for a fixed block range given an address.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blocks"
+                ],
+                "summary": "Get all transactions for a fixed block range given an address.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Address",
+                        "name": "address",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Block Range",
+                        "name": "blockRange",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/block/current": {
             "get": {
                 "description": "Get current Ethereum block.",
@@ -60,9 +92,9 @@
                 "responses": {}
             }
         },
-        "/api/v1/{address}/transactions": {
+        "/api/v1/subscription/{address}/transactions": {
             "get": {
-                "description": "Get all transactions for a fixed block range given an address.",
+                "description": "Get all transactions for a subscribed address.",
                 "consumes": [
                     "application/json"
                 ],
@@ -72,7 +104,7 @@
                 "tags": [
                     "blocks"
                 ],
-                "summary": "Get all transactions for a fixed block range given an address.",
+                "summary": "Get all transactions for a subscribed address.",
                 "parameters": [
                     {
                         "type": "string",
